--- a/index.html
+++ b/index.html
@@ -6,42 +6,97 @@
 <title>📊 แอปบันทึกรายรับ-รายจ่าย</title>
 
 <style>
+/* การตั้งค่าพื้นฐาน */
 body {
     font-family: 'Segoe UI', Tahoma, sans-serif;
     background: #f0f2f5;
-    margin: 0;
+    margin: 0; 
     padding: 20px;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
+
+/* ===== 1. สไตล์หน้าล็อกอิน (Login Screen) ===== */
+#loginSection {
+    background: #fff;
+    padding: 40px;
+    border-radius: 15px;
+    box-shadow: 0 10px 25px rgba(0,0,0,0.1);
+    width: 100%;
+    max-width: 380px;
+    text-align: center;
+    margin-top: 80px;
+}
+#loginSection h2 { color: #1a73e8; margin-top: 0; }
+#loginSection input {
+    width: 100%;
+    padding: 12px;
+    margin-bottom: 15px;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    box-sizing: border-box;
+    font-size: 16px;
+}
+#loginSection button {
+    width: 100%;
+    padding: 12px;
+    background: #1a73e8;
+    color: white;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    font-size: 16px;
+    font-weight: bold;
+}
+#loginSection button:hover { background: #1557b0; }
+.err-msg { color: #d32f2f; font-size: 14px; margin-top: 10px; height: 20px; }
+
+/* ===== 2. สไตล์ส่วนแอปหลัก (Main App) ===== */
+#mainApp { display: none; width: 100%; max-width: 900px; }
+
 .container {
     background: #fff;
     padding: 30px;
     border-radius: 12px;
-    width: 100%;
-    max-width: 900px;
     box-shadow: 0 6px 20px rgba(0,0,0,.1);
 }
-h1 {
-    text-align: center;
-    color: #1a73e8;
+
+/* ปุ่มล็อกเอาต์ (Logout Button) */
+.header-bar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 15px;
 }
+.logout-btn {
+    background: #f44336;
+    color: white;
+    border: none;
+    padding: 8px 15px;
+    border-radius: 6px;
+    cursor: pointer;
+    font-size: 14px;
+    font-weight: bold;
+    transition: 0.3s;
+}
+.logout-btn:hover { background: #d32f2f; }
+
+/* ส่วนสรุปผล */
 .summary-display {
     display: flex;
     justify-content: space-between;
     background: #e3f2fd;
-    padding: 15px;
+    padding: 20px;
     border-radius: 10px;
     margin-bottom: 25px;
 }
-.summary-box {
-    flex: 1;
-    text-align: center;
-}
-#currentBalance { font-size: 1.8em; font-weight: bold; }
+.summary-box { flex: 1; text-align: center; }
+#currentBalance { font-size: 1.8em; font-weight: bold; color: #1a73e8; }
 #totalIncome { color: #2e7d32; font-weight: bold; }
 #totalExpense { color: #c62828; font-weight: bold; }
 
+/* ส่วนกรอกข้อมูล */
 .input-section {
     display: flex;
     gap: 10px;
@@ -51,217 +106,228 @@ h1 {
     border-radius: 8px;
     margin-bottom: 25px;
 }
-.input-section input,
-.input-section select,
-.input-section button {
-    padding: 10px;
-    font-size: 1em;
-}
-.input-section button {
-    background: #4CAF50;
-    color: #fff;
-    border: none;
+.input-section input, .input-section select, .input-section button { 
+    padding: 10px; 
+    font-size: 1em; 
+    border: 1px solid #ddd; 
     border-radius: 5px;
-    cursor: pointer;
+}
+.input-section button { 
+    background: #4CAF50; 
+    color: #fff; 
+    border: none; 
+    cursor: pointer; 
+    font-weight: bold;
 }
 
-table {
-    width: 100%;
-    border-collapse: collapse;
-}
-th, td {
-    border: 1px solid #ddd;
-    padding: 8px;
-    text-align: center;
-}
-th { background: #eee; }
-
+/* ตารางข้อมูล */
+table { width: 100%; border-collapse: collapse; margin-top: 10px; }
+th, td { border: 1px solid #ddd; padding: 10px; text-align: center; }
+th { background: #f1f1f1; }
 .income-row { background: #e8f5e9; color: #2e7d32; }
 .expense-row { background: #fbe9e7; color: #c62828; }
-
-.delete-btn {
-    background: #f44336;
-    color: #fff;
-    border: none;
-    padding: 5px 8px;
-    border-radius: 4px;
-    cursor: pointer;
-}
+.delete-btn { background: #ff5252; color: white; border: none; padding: 5px 10px; border-radius: 4px; cursor: pointer; }
 </style>
 </head>
 
 <body>
-<div class="container">
 
-<h1>📊 แอปบันทึกรายรับ-รายจ่าย</h1>
-
-<div class="summary-display">
-    <div class="summary-box">
-        <p>รายรับรวม</p>
-        <span id="totalIncome">0.00 บาท</span>
-    </div>
-    <div class="summary-box">
-        <p>รายจ่ายรวม</p>
-        <span id="totalExpense">0.00 บาท</span>
-    </div>
-    <div class="summary-box">
-        <p>คงเหลือ</p>
-        <span id="currentBalance">0.00 บาท</span>
-    </div>
+<div id="loginSection">
+    <h2>🔐 เข้าสู่ระบบ</h2>
+    <input type="text" id="userInput" placeholder="ชื่อผู้ใช้งาน">
+    <input type="password" id="passInput" placeholder="รหัสผ่าน">
+    <button onclick="handleLogin()">เข้าสู่ระบบ</button>
+    <div id="loginError" class="err-msg"></div>
 </div>
 
-<div class="input-section">
-    <select id="transactionType" onchange="updateCategoryOptions()">
-        <option value="income">รายรับ</option>
-        <option value="expense">รายจ่าย</option>
-    </select>
+<div id="mainApp">
+    <div class="header-bar">
+        <span style="font-weight: bold; color: #555;">Smart Money Tracker</span>
+        <button class="logout-btn" onclick="handleLogout()">🚪 ออกจากระบบ</button>
+    </div>
+    
+    <div class="container">
+        <h1 style="text-align: center; color: #1a73e8; margin-top: 0;">📊 รายรับ-รายจ่าย</h1>
 
-    <select id="transactionCategory"></select>
-    <input type="number" id="transactionAmount" placeholder="จำนวนเงิน">
-    <input type="text" id="transactionDescription" placeholder="รายละเอียด">
-    <button onclick="addTransaction()">บันทึก</button>
-</div>
+        <div class="summary-display">
+            <div class="summary-box">
+                <p style="margin: 0;">รายรับรวม</p>
+                <span id="totalIncome">0.00 บาท</span>
+            </div>
+            <div class="summary-box">
+                <p style="margin: 0;">รายจ่ายรวม</p>
+                <span id="totalExpense">0.00 บาท</span>
+            </div>
+            <div class="summary-box">
+                <p style="margin: 0;">คงเหลือ</p>
+                <span id="currentBalance">0.00 บาท</span>
+            </div>
+        </div>
 
-<table>
-<thead>
-<tr>
-    <th>วันที่</th>
-    <th>รายละเอียด</th>
-    <th>ประเภท</th>
-    <th>หมวดหมู่</th>
-    <th>จำนวน</th>
-    <th>ลบ</th>
-</tr>
-</thead>
-<tbody id="historyTableBody">
-<tr><td colspan="6">กำลังโหลดข้อมูล...</td></tr>
-</tbody>
-</table>
+        <div class="input-section">
+            <select id="transactionType" onchange="updateCategoryOptions()">
+                <option value="income">รายรับ</option>
+                <option value="expense">รายจ่าย</option>
+            </select>
+            <select id="transactionCategory"></select>
+            <input type="number" id="transactionAmount" placeholder="จำนวนเงิน">
+            <input type="text" id="transactionDescription" placeholder="รายละเอียด">
+            <button onclick="addTransaction()">➕ บันทึก</button>
+        </div>
 
+        <table>
+            <thead>
+                <tr>
+                    <th>วันที่</th>
+                    <th>รายละเอียด</th>
+                    <th>ประเภท</th>
+                    <th>หมวดหมู่</th>
+                    <th>จำนวน</th>
+                    <th>ลบ</th>
+                </tr>
+            </thead>
+            <tbody id="historyTableBody">
+                <tr><td colspan="6">กำลังโหลดข้อมูล...</td></tr>
+            </tbody>
+        </table>
+    </div>
 </div>
 
 <script>
-const GOOGLE_SHEET_WEB_APP_URL =
-'https://script.google.com/macros/s/AKfycbxPXbkt6_vRFn2CZN011WjwIBQ1e8x_PYekaFRJzIQZVUeflPkRVNZIFhNubtrltvzDcg/exec';
-
-let transactions = [];
-
-const categories = {
-    income: [
-        { value: 'salary', label: 'เงินเดือน' },
-        { value: 'other', label: 'อื่นๆ' }
-    ],
-    expense: [
-        { value: 'food', label: 'อาหาร' },
-        { value: 'travel', label: 'เดินทาง' },
-        { value: 'other', label: 'อื่นๆ' }
-    ]
+/* ข้อมูลสำหรับเข้าสู่ระบบ */
+const AUTH_CONFIG = {
+    username: "Din",
+    password: "1234"
 };
 
+const GOOGLE_SHEET_URL = 'https://script.google.com/macros/s/AKfycbxPXbkt6_vRFn2CZN011WjwIBQ1e8x_PYekaFRJzIQZVUeflPkRVNZIFhNubtrltvzDcg/exec';
+
+let transactions = [];
+const categories = {
+    income: [{v:'salary', l:'เงินเดือน'}, {v:'other', l:'อื่นๆ'}],
+    expense: [{v:'food', l:'อาหาร'}, {v:'travel', l:'เดินทาง'}, {v:'other', l:'อื่นๆ'}]
+};
+
+/* --- ระบบ Authentication --- */
+
 document.addEventListener('DOMContentLoaded', () => {
+    // ตรวจสอบว่าเคยล็อกอินค้างไว้ไหม
+    if (localStorage.getItem("isLoggedIn") === "true") {
+        showMainApp();
+    }
+});
+
+function handleLogin() {
+    const user = document.getElementById('userInput').value;
+    const pass = document.getElementById('passInput').value;
+    const errorDisplay = document.getElementById('loginError');
+
+    if (user === AUTH_CONFIG.username && pass === AUTH_CONFIG.password) {
+        localStorage.setItem("isLoggedIn", "true");
+        showMainApp();
+    } else {
+        errorDisplay.textContent = "ชื่อผู้ใช้หรือรหัสผ่านไม่ถูกต้อง!";
+    }
+}
+
+function handleLogout() {
+    if (confirm("คุณต้องการออกจากระบบใช่หรือไม่?")) {
+        localStorage.removeItem("isLoggedIn");
+        location.reload(); // รีโหลดเพื่อกลับไปหน้าล็อกอิน
+    }
+}
+
+function showMainApp() {
+    document.getElementById('loginSection').style.display = 'none';
+    document.getElementById('mainApp').style.display = 'block';
     updateCategoryOptions();
     fetchHistory();
-});
+}
+
+/* --- ระบบจัดการข้อมูล (โค้ดเดิมของคุณ) --- */
 
 function formatNumber(n) {
     return Number(n).toLocaleString('th-TH', { minimumFractionDigits: 2 });
 }
 
 function updateCategoryOptions() {
-    const type = transactionType.value;
-    transactionCategory.innerHTML = '';
+    const type = document.getElementById('transactionType').value;
+    const catSelect = document.getElementById('transactionCategory');
+    catSelect.innerHTML = '';
     categories[type].forEach(c => {
         const opt = document.createElement('option');
-        opt.value = c.value;
-        opt.textContent = c.label;
-        transactionCategory.appendChild(opt);
+        opt.value = c.v; opt.textContent = c.l;
+        catSelect.appendChild(opt);
     });
-}
-
-function updateSummary() {
-    let income = 0, expense = 0;
-    transactions.forEach(t => {
-        if (t.type === 'income') income += Number(t.amount);
-        else expense += Number(t.amount);
-    });
-    totalIncome.textContent = formatNumber(income) + ' บาท';
-    totalExpense.textContent = formatNumber(expense) + ' บาท';
-    currentBalance.textContent = formatNumber(income - expense) + ' บาท';
 }
 
 async function fetchHistory() {
-    const res = await fetch(GOOGLE_SHEET_WEB_APP_URL);
-    const data = await res.json();
+    try {
+        const res = await fetch(GOOGLE_SHEET_URL);
+        const data = await res.json();
+        transactions = Array.isArray(data) ? data : [];
+        updateSummary();
+        renderHistory();
+    } catch (e) {
+        console.error("Fetch Error:", e);
+    }
+}
 
-    // ⭐ แก้จุดสำคัญ
-    transactions = Array.isArray(data) ? data : [];
-
-    updateSummary();
-    renderHistory();
+function updateSummary() {
+    let inc = 0, exp = 0;
+    transactions.forEach(t => {
+        if (t.type === 'income') inc += Number(t.amount);
+        else exp += Number(t.amount);
+    });
+    document.getElementById('totalIncome').textContent = formatNumber(inc) + ' บาท';
+    document.getElementById('totalExpense').textContent = formatNumber(exp) + ' บาท';
+    document.getElementById('currentBalance').textContent = formatNumber(inc - exp) + ' บาท';
 }
 
 async function addTransaction() {
-    if (!transactionAmount.value) return alert('กรุณาใส่จำนวนเงิน');
+    const amt = document.getElementById('transactionAmount');
+    if (!amt.value) return alert('กรุณาใส่จำนวนเงิน');
 
-    const data = new URLSearchParams({
+    const payload = new URLSearchParams({
         id: Date.now(),
         dateTime: new Date().toLocaleString('th-TH'),
-        type: transactionType.value,
-        category: transactionCategory.value,
-        description: transactionDescription.value,
-        amount: transactionAmount.value
+        type: document.getElementById('transactionType').value,
+        category: document.getElementById('transactionCategory').value,
+        description: document.getElementById('transactionDescription').value,
+        amount: amt.value
     });
 
-    await fetch(GOOGLE_SHEET_WEB_APP_URL, {
-        method: 'POST',
-        body: data
-    });
-
-    transactionAmount.value = '';
-    transactionDescription.value = '';
+    await fetch(GOOGLE_SHEET_URL, { method: 'POST', body: payload });
+    amt.value = ''; document.getElementById('transactionDescription').value = '';
     fetchHistory();
 }
 
 async function deleteTransaction(id) {
-    if (!confirm('ยืนยันการลบ?')) return;
-
-    const data = new URLSearchParams({
-        action: 'delete',
-        id
-    });
-
-    await fetch(GOOGLE_SHEET_WEB_APP_URL, {
-        method: 'POST',
-        body: data
-    });
-
+    if (!confirm('ต้องการลบรายการนี้ใช่หรือไม่?')) return;
+    const payload = new URLSearchParams({ action: 'delete', id: id });
+    await fetch(GOOGLE_SHEET_URL, { method: 'POST', body: payload });
     fetchHistory();
 }
 
 function renderHistory() {
-    historyTableBody.innerHTML = '';
-
+    const body = document.getElementById('historyTableBody');
+    body.innerHTML = '';
     if (transactions.length === 0) {
-        historyTableBody.innerHTML =
-            `<tr><td colspan="6">ไม่มีข้อมูล</td></tr>`;
+        body.innerHTML = '<tr><td colspan="6">ไม่มีข้อมูล</td></tr>';
         return;
     }
-
     transactions.slice().reverse().forEach(t => {
         const tr = document.createElement('tr');
         tr.className = t.type === 'income' ? 'income-row' : 'expense-row';
         tr.innerHTML = `
             <td>${t.dateTime}</td>
             <td>${t.description}</td>
-            <td>${t.type}</td>
+            <td>${t.type === 'income' ? 'รายรับ' : 'รายจ่าย'}</td>
             <td>${t.category}</td>
             <td>${formatNumber(t.amount)}</td>
-            <td>
-                <button class="delete-btn"
-                    onclick="deleteTransaction('${t.id}')">ลบ</button>
-            </td>
+            <td><button class="delete-btn" onclick="deleteTransaction('${t.id}')">ลบ</button></td>
         `;
-        historyTableBody.appendChild(tr);
+        body.appendChild(tr);
     });
 }
 </script>
